--- a/app/src/assets/markdown.scss
+++ b/app/src/assets/markdown.scss
@@ -6,8 +6,7 @@ html {
   }
   code.hljs {
     padding: 3px 5px;
-  } /*!
-*/
+  }
   .hljs {
     color: #24292e;
     background: #fff;
@@ -194,7 +193,7 @@ html[theme-mode='dark'] {
   }
 
   pre {
-    padding: 10px 10px;
+    padding: 10px 30px;
     margin: 10px 0px;
     border-radius: 10px;
     background-color: var(--cood-block-bg);
