ui: update import question dialog form per

--- a/app/src/assets/main.scss
+++ b/app/src/assets/main.scss
@@ -11,6 +11,7 @@
   --code-box-bg: #aacef3;
   --cood-block-bg: #ededed;
   --thumb-bg: #d8d8d8;
+  --gray-bg: #bfbfbf7a;
 }
 
 :root[theme-mode='dark'] {
@@ -19,6 +20,7 @@
   --code-box-bg: #0d47a1;
   --cood-block-bg: #282828;
   --thumb-bg: #424242;
+  --gray-bg: #60606084;
 }
 
 html {
