fix: fix some packaged style bugs

--- a/app/src/assets/main.scss
+++ b/app/src/assets/main.scss
@@ -3,6 +3,7 @@
 );
 
 @import url('./markdown.scss');
+@import 'tdesign-vue-next/es/style/index.css';
 
 :root {
   --td-brand-color: #000 !important;
