ui: update scroll style

--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -74,3 +74,22 @@
     @apply bg-background text-foreground;
   }
 }
+
+:root {
+  --muted: 0 0% 96.1%;
+}
+
+:root {
+  .dark {
+    --muted: 0 0% 14.9%;
+  }
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 3px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(112, 112, 112, 0.636);
+}
