--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -13,7 +13,7 @@
 
 @layer base {
   :root {
-    --band: #7d09f1;
+    --brand: #7d09f1;
 
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -47,15 +47,15 @@
   }
 
   .dark {
-    --band: #a858f9;
+    --brand: #a858f9;
 
     --background: 0 0% 10%;
     --foreground: 0 0% 98%;
 
-    --card: 0 0% 3.9%;
+    --card: 0 0% 10%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 0 0% 3.9%;
+    --popover: 0 0% 10%;
     --popover-foreground: 0 0% 98%;
 
     --primary: 0 0% 98%;
